<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.InternalDspFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.auto.hequalizer.EqualizerSurface
        android:id="@+id/frequencyResponse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dsp_frequency_layout_height"
        android:layout_marginStart="@dimen/dsp_frequency_layout_paddingStart"
        android:layout_marginEnd="@dimen/dsp_frequency_layout_paddingEnd"
        android:layout_marginTop="@dimen/dsp_frequency_layout_paddingTop"
        android:background="@null"
        android:foreground="@drawable/asp_eq_seekbar_bg"
        app:gridlines_color="@color/xt540_text_color_translate"
        app:bar_color="@color/xt540_text_color_translate"
        app:bar_text_color="@android:color/white"
        app:bar_text_shadow_color="@color/xt540_text_color_translate"
        app:bar_text_size="@dimen/dsp_frequency_bar_tv_size"
        app:bar_width="@dimen/dsp_frequency_bar_width"
        app:freq_curve_bg_shader_color_1="@color/bg_shader_color_6"
        app:freq_curve_bg_shader_color_2="@color/bg_shader_color_6"
        app:freq_curve_bg_shader_color_3="@color/bg_shader_color_6"
        app:freq_curve_bg_shader_color_4="@color/bg_shader_color_6"
        app:freq_curve_bg_shader_color_5="@color/bg_shader_color_6"
        app:heq_bar_shader_color_1 ="#00FA0000"
        app:heq_bar_shader_color_2 ="#D70000"
        app:freq_curve_color_1="@color/bg_shader_color_6"
        app:freq_curve_color_2="@color/bg_shader_color_6"
        app:freq_curve_width_1="@dimen/dsp_freq_curve_width_1"
        app:freq_curve_width_2="@dimen/dsp_freq_curve_width_2"
        app:gain_text_color="@android:color/white"
        app:gain_text_size="@dimen/dsp_frequency_gain_tv_size"
        app:bar_gain_text_color="@android:color/white"
        app:heq_bar_knob_color="@color/bar_knob_color"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RadioGroup
        android:id="@+id/dsp_reverb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dsp_frequency_layout_padding"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/frequencyResponse"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/dsp_reverb_user"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_user"
            android:layout_marginStart="@dimen/xt540_dsp_reverb_user_marginStart"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_user" />

        <RadioButton
            android:id="@+id/dsp_reverb_news"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_news"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_news" />

        <RadioButton
            android:id="@+id/dsp_reverb_jazz"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_jazz"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_jazz" />

        <RadioButton
            android:id="@+id/dsp_reverb_city"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_city"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_city" />

        <RadioButton
            android:id="@+id/dsp_reverb_pop"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_pop"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_pop" />

        <RadioButton
            android:id="@+id/dsp_reverb_electronic"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_electronic"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_electronic" />

        <RadioButton
            android:id="@+id/dsp_reverb_classiz"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_classic"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_classiz" />

        <RadioButton
            android:id="@+id/dsp_reverb_movie"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_movie"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_movie" />

        <RadioButton
            android:id="@+id/dsp_reverb_rock"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_rock"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_rock" />

        <RadioButton
            android:id="@+id/dsp_reverb_techno"
            style="@style/asp_mode_btn"
            android:background="@drawable/asp_mode_techno"
            android:layout_marginEnd="@dimen/xt540_dsp_reverb_user_marginEnd"
            android:text="@string/reverb_techno" />
    </RadioGroup>

    <Button
        android:id="@+id/dsp_reset"
        android:layout_width="@dimen/asp_reverb_width"
        android:layout_height="@dimen/asp_reverb_height"
        android:layout_marginStart="@dimen/dsp_dsp_reset_layout_marginStart"
        android:background="@drawable/dsp_reset_selector"
        app:layout_constraintBottom_toBottomOf="@+id/dsp_reverb_group"
        app:layout_constraintStart_toEndOf="@+id/dsp_reverb_group"
        app:layout_constraintTop_toTopOf="@+id/dsp_reverb_group" />
</androidx.constraintlayout.widget.ConstraintLayout>